--- a/CSS/bootstrap-utilities.css
+++ b/CSS/bootstrap-utilities.css
@@ -11,7 +11,7 @@
 }
 
 .link-primary {
-  color: #0d6efd;
+  color: #34495E;
 }
 .link-primary:hover, .link-primary:focus {
   color: #0a58ca;
@@ -25,7 +25,7 @@
 }
 
 .link-success {
-  color: #198754;
+  color: #22313F;
 }
 .link-success:hover, .link-success:focus {
   color: #146c43;
@@ -421,7 +421,7 @@
 }
 
 .border-primary {
-  border-color: #0d6efd !important;
+  border-color: #34495E !important;
 }
 
 .border-secondary {
@@ -429,7 +429,7 @@
 }
 
 .border-success {
-  border-color: #198754 !important;
+  border-color: #22313F !important;
 }
 
 .border-info {
@@ -1250,7 +1250,7 @@
 
 /* rtl:end:remove */
 .text-primary {
-  color: #0d6efd !important;
+  color: #34495E !important;
 }
 
 .text-secondary {
@@ -1258,7 +1258,7 @@
 }
 
 .text-success {
-  color: #198754 !important;
+  color: #22313F !important;
 }
 
 .text-info {
@@ -1306,7 +1306,7 @@
 }
 
 .bg-primary {
-  background-color: #0d6efd !important;
+  background-color: #34495E !important;
 }
 
 .bg-secondary {
@@ -1314,7 +1314,7 @@
 }
 
 .bg-success {
-  background-color: #198754 !important;
+  background-color: #22313F !important;
 }
 
 .bg-info {
